# brain-cv-utils

./: .gitignore  CMakeLists.txt  README.md  brain-cv-utils-pico-2.uf2  brain-cv-utils-pico.uf2  main.cpp
src/: ad-envelope.cpp  ad-envelope.h  attenuverter.cpp  attenuverter.h  calibration.cpp  calibration.h  cv-mixer.cpp  cv-mixer.h  cv-utils.cpp  cv-utils.h  fixed-point.h  led-controller.cpp  led-controller.h  main.cpp  noise.cpp  noise.h  precision-adder.cpp  precision-adder.h  slew-limiter.cpp  slew-limiter.h  voltage-smoother.h
tests/: slew_limiter_math_test.cpp  voltage_smoother_test.cpp
